user registration implemented
